# slammer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.bat  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: baked_layout.json
assets/factory_presets/: 808.json  909-ish.json  909.json  Clean_Sub.json  Init.json  Punchy_Techno.json  clap.json  hh.json  niner.json  overdose.json  psy.json  sd1.json  sd2.json  tight.json
docs/: index.html
docs/superpowers/plans/: 2026-04-04-g3-gui-overhaul.md  2026-04-05-preset-bar-and-scaling.md  2026-04-06-manual-tempo-entry.md  2026-04-11-flam.md
docs/superpowers/specs/: 2026-04-04-g3-gui-overhaul-design.md  2026-04-05-preset-bar-and-scaling-design.md  2026-04-06-manual-tempo-entry-design.md  2026-04-11-flam-design.md
mockups/: mockup-a-dark-steel.html  mockup-b-olive-mil.html  mockup-c-black-rack.html  mockup-d-black-red.html  mockup-e-blue-panel.html  mockup-f-mixed-panels.html  mockup-g1.html  mockup-g2.html  mockup-g3.html
packaging/aur/: PKGBUILD  README.md
scripts/: niner-macos.sh  slammer-macos.sh  smoke_standalone.sh
src/: lib.rs  logging.rs  main.rs  midi_map.rs  params.rs  plugin.rs  presets.rs  sequencer.rs  win_keys.rs  windows_standalone.rs
src/dsp/: clap.rs  click.rs  dj_filter.rs  drift.rs  engine.rs  envelope.rs  filter.rs  master_bus.rs  mod.rs  noise.rs  oscillator.rs  saturation.rs  spectrum.rs  tube.rs  voice_clip.rs
src/export/: mod.rs  render.rs  writer.rs
src/ui/: editor.rs  knob.rs  layout_overrides.rs  mod.rs  panels.rs  preset_bar.rs  randomize.rs  seven_seg.rs  theme.rs  widgets.rs
src/util/: feedback.rs  messages.rs  mod.rs  paths.rs  telemetry.rs
tests/: golden_engine.rs  persist_race.rs  plugin_determinism.rs
tools/: niner-launch.sh  niner.desktop.template
xtask/: Cargo.toml
xtask/src/: main.rs
