[workspace]
members = ["xtask"]

[package]
name = "slammer"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Kick drum synthesizer plugin"
authors = ["Hyperfocus DSP <hello@hyperfocusdsp.com>"]
homepage = "https://hyperfocusdsp.com"
repository = "https://github.com/hyperfocusdsp/slammer"

[lib]
# `cdylib` for VST3/CLAP bundles; `rlib` so the `slammer-standalone` binary
# can link against the same lib (no duplicated module trees).
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slammer-standalone"
path = "src/main.rs"

[dependencies]
# Plugin framework — pinned to a specific commit for reproducible builds
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

# Real-time safety
rtrb = "0.3"

# Concurrency
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Cross-platform data directories
directories = "5"

# Audio file writing (one-shot export / bounce).
hound = "3"

# Native file-save dialog for the BOUNCE button. Default features give the
# synchronous API (gtk3 backend on Linux, Cocoa on macOS, Win32 on Windows) —
# save_file() blocks the GUI thread briefly, which is fine because the user
# is actively waiting and audio runs on its own thread.
rfd = "0.14"

# PNG decoding for the header logo (one-time decode at editor startup).
image = { version = "0.25", default-features = false, features = ["png"] }

# RNG for the DICE randomize feature (GUI thread only).
rand = "0.8"

# Windows-only: direct cpal access so the standalone can probe the default
# output device and pass matching --sample-rate / --period-size to nih-plug.
# Without this, nih-plug's hardcoded defaults (48 kHz / 512) mismatch WASAPI
# on many Windows systems and the backend falls back to the dummy sink.
# cpal is already transitive via nih-plug; this just exposes it directly.
[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"

[profile.release]
lto = "thin"
strip = "symbols"
