[workspace]
members = ["xtask"]

[package]
name = "slammer"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Kick drum synthesizer plugin"
authors = ["Hyperfocus DSP <hello@hyperfocusdsp.com>"]
homepage = "https://hyperfocusdsp.com"
repository = "https://github.com/hyperfocusdsp/slammer"

[lib]
# `cdylib` for VST3/CLAP bundles; `rlib` so the `slammer-standalone` binary
# can link against the same lib (no duplicated module trees).
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slammer-standalone"
path = "src/main.rs"

[dependencies]
# Plugin framework — pinned to a specific commit for reproducible builds
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

# Real-time safety
rtrb = "0.3"

# FFT for the OUTPUT-display spectrum analyzer. Thin wrapper over rustfft
# that takes real-valued input directly (audio is real) and pre-plans the
# transform at `initialize()`, so `process()` allocates nothing.
realfft = "3.5"

# Concurrency
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Cross-platform data directories
directories = "5"

# Audio file writing (one-shot export / bounce).
hound = "3"

# Native file-save dialog for the BOUNCE button. Default features give the
# synchronous API (gtk3 backend on Linux, Cocoa on macOS, Win32 on Windows) —
# save_file() blocks the GUI thread briefly, which is fine because the user
# is actively waiting and audio runs on its own thread.
rfd = "0.14"

# PNG decoding for the header logo (one-time decode at editor startup).
image = { version = "0.25", default-features = false, features = ["png"] }

# RNG for the DICE randomize feature (GUI thread only).
rand = "0.8"

# Windows-only: direct cpal access so the standalone can probe the default
# output device and pass matching --sample-rate / --period-size to nih-plug.
# Without this, nih-plug's hardcoded defaults (48 kHz / 512) mismatch WASAPI
# on many Windows systems and the backend falls back to the dummy sink.
# cpal is already transitive via nih-plug; this just exposes it directly.
#
# winapi is also already transitive (via baseview) — declaring it here just
# gives us `GetAsyncKeyState` / foreground-window checks so the standalone
# can detect T/Space presses that nih-plug's outer WindowHandler swallows.
# See `src/win_keys.rs` for the rationale.
[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[profile.release]
lto = "thin"
strip = "symbols"

# Force both baseview pins (via nih-plug and via egui-baseview) to a newer
# master that includes RustAudio/baseview#212 — "Implement keyboard event
# hook on Windows". The pinned nih-plug commit predates this fix, so
# standalone Windows builds receive zero keyboard events (confirmed via
# empty `[keyboard]` diagnostic in slammer.log). The PR is a pure add
# (new `src/win/hook.rs` + two field additions to `WindowState`) with no
# public API change, so both dependents continue to compile unchanged.
#
# Cargo requires the patch source to be a different URL than the one
# being patched, so we pin to a fork at Hornfisk/baseview that tracks
# `RustAudio/baseview@master` (commit 237d323).
# Upstream fix: https://github.com/RustAudio/baseview/pull/212
[patch."https://github.com/RustAudio/baseview.git"]
baseview = { git = "https://github.com/Hornfisk/baseview.git", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3" }
